components/navigation/navigation-style.scss
@import 'vars';
@import 'mixins';
@import 'functions';

.navigation {
  flex: 0 0 auto;
  transition: background 250ms;
  background: map-get($colors, mine-shaft);

  &--transparent {
    position:relative;
    display:flex;
    justify-content: center;
    background: transparent;
    z-index:5;

    .navigation__inner {
      position:absolute;
      left:0;

      @include break {
        left:auto;
      }
    }

    .navigation__link:hover,
    .navigation__mobile,
    .navigation__search-input,
    .navigation__search-icon:hover {
      color: map-get($colors, emperor);
    }
  }
}

.navigation__inner {
  display: flex;
  align-items: center;
  padding: 0.6em 1em;

  @include break {
    padding:0 1.5em;
  }
}

.navigation__mobile {
  display: flex;
  font-size: 1.5em;
  margin-left: -1em;
  align-items: center;
  color: map-get($colors, white);
  cursor: pointer;
  transition: color 250ms;

  &:active {
    color: map-get($colors, alto);
  }

  @include break {
    display: none;
  }
}

.navigation__logo {
  margin:auto;
}

.navigation__links {
  display: none;

  @include break {
    flex: 1 1 auto;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }
}

.navigation__link {
  @include break {
    display:inline-block;
    font-size: getFontSize(-1);
    text-transform: uppercase;
    color: map-get($colors, dusty-grey);
    transition:all 250ms;
    padding:1.5em 0.75em;

    &:last-child {
      margin-right:0.75em;
    }
  }

  @include break('large') {
    padding:1.5em;
  }

  &:hover,
  &--active {
    color: map-get($colors, white);
  }

  &--active {
    background: map-get($colors, emperor);
  }
}

.navigation__search {
  display:none;
}

@include break {
  .navigation__search {
    flex:0 0 auto;
    display:flex;
    justify-content:flex-end;
    padding:0.8em 0;

    &-input {
      padding:0;
      border:none;
      background:transparent;

      width:0;
      font-size:14px;
      font-family:'Cabin', 'Century Gothic', sans-serif;
      text-indent:0.5em;
      border-bottom:1px solid map-get($colors, emperor);
      margin-right:0;
      color: map-get($colors, white);
      text-shadow: 0 0 0 map-get($colors, concrete);
      transition:all 250ms;

      &::-webkit-input-placeholder{
        color:map-get($colors, dove-grey);
        text-shadow: none;
        -webkit-text-fill-color: initial;
      }
    }

    &-icon {
      display:inline-block;
      font-size:getFontSize(1);
      transform:rotate(-45deg);
      font-weight:800;
      color:map-get($colors, dusty-grey);
      cursor:pointer;
      background:transparent;
      padding:0;
      border:none;
      transition:color 250ms;

      &:hover {
        color:map-get($colors, white);
      }
    }

    &-input:focus,
    &-icon:focus {
      outline:none;
    }
  }
}

@include break {
  .navigation--search-mode {
    .navigation__link {
      pointer-events:none;
      overflow:hidden;
      white-space:nowrap;
      padding:1.5em 0;
      margin-right:-35px;
      opacity:0;
    }

    .navigation__search-input {
      margin-right:0.5em;
      width:400px;
    }
  }
}

.navigation__bottom {
  background:map-get($colors, emperor);
}

.navigation__child {
  font-size: getFontSize(-1);
  margin:0.5em 1em 0.6em;
  color:map-get($colors, dusty-grey);
  text-transform: uppercase;

  &:first-of-type {
    margin-left: 0;
  }

  &:hover,
  &--active {
    color:map-get($colors, white);
  }
}

